Scratch working in script3.js

--- a/Basic testing to learn/.env
+++ b/Basic testing to learn/.env
@@ -6,3 +6,6 @@
 
 DATABASE_URL="mysql://root:Achusan123@localhost:3306/court_scraper"
 2CAPTCHA_API_KEY="f048fd937e44bef6e0689899680cd105"
+DYNAMIC_NUMBER = 1
+YEAR = 2020
+TYPE = GENERATE
